BCR-3 Implement a resource listing all process definitions